Spacing between views fixed

--- a/public/view/stylesheet.css
+++ b/public/view/stylesheet.css
@@ -160,18 +160,17 @@ height: 1000px;
 }
 
 .content {
-  width: 80%;
   position:inline-block;
   padding-left: 20px;
-  padding-top: 5px;
+  padding-right: 20px;
+  padding-top: 15px;
   padding-bottom: 20px;
   background-color: rgba(5,58,89,0.6);
-	border-radius:10px;
-	margin-top: 15px;
-	margin-left: 225px;
-	margin-right: 50px;
-	'overflow-y: scroll;'
-	height: 1000px; 
+  border-radius:10px;
+  margin-top: 15px;
+  margin-right: 10px;
+  overflow-y: scroll;
+  height: auto; 
 }
 
 contentcenter {
@@ -187,11 +186,11 @@ contentcenter {
   z-index: 1;
   background-color: rgba(5,58,89,0.6);
   border-radius:10px;
-  'overflow-y: scroll;'
+  overflow-y: scroll;
   color: #ffffff;
   margin-top: 5px;
   margin-left: 10px;
-  margin-right: 100px;
+  margin-right: 15px;
 }
 
 .sidebar ul {
@@ -218,16 +217,15 @@ contentcenter {
   height: 100%;
   width: 200px;
   float: right;
-  padding: 5px;
+  padding: 15px;
   position: inline-block;
   z-index: 1;
   background-color: rgba(0,0,0,0.6);
   border-radius:10px;
-  'overflow-y: scroll;'
+  overflow-y: scroll;
   color: #ffffff;
   margin-top: 5px;
-  margin-left: 100px;
-  margin-right: 50px;
+  margin-right: 0px;
 }
 
 .sidebar2 ul {
